force-app/main/default/objects/User/fields/CountryISO_Code__c.field-meta.xml
<CustomField>
    <fullName>CountryISO_Code__c</fullName>
    <label>CountryISO Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>