force-app/main/default/objects/User/fields/Last_Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Time__c</fullName>
    <label>Last Login Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>