force-app/main/default/objects/User/fields/Login_Country__c.field-meta.xml
<CustomField>
    <fullName>Login_Country__c</fullName>
    <label>Login Country</label>
    <length>5</length>
    <type>Text</type>
</CustomField>